--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.2</version>
-            </plugin>
+	    </plugin>
 
+	    <plugin>
+        	<groupId>org.sonarsource.scanner.maven</groupId>
+        	<artifactId>sonar-maven-plugin</artifactId>
+        	<version>3.10.0.2594</version>
+	    </plugin>
         </plugins>
     </build>
 
